updated logo, merged map and cards html.erb and corresponding CSS files, reduced placeholder font size in banner search bar

--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,3 +1,20 @@
-<h1>Flats#index</h1>
-<p>Find me in app/views/flats/index.html.erb</p>
-<h1>This will be our new INDEX</h1>
+<div class="banner" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('http://d28hgpri8am2if.cloudfront.net/book_images/onix/interior_spreads/9781782494119/the-scandinavian-home-9781782494119.in03.jpg');">
+  <div class="banner-content">
+    <h1>WELCOME HOME</h1>
+    <p>Rent unique places to stay from local hosts in 190+ countries.</p>
+    <form action="#" class="form-inline">
+      <input type="text" class="form-control input-lg" placeholder="Destination">
+      <input type="text" class="form-control input-lg" placeholder="Check In">
+      <input type="text" class="form-control input-lg" placeholder="Check Out">
+      <select name="" id="guest" class="form-control input-lg">
+        <option value="1">1 person</option>
+        <option value="2">2 persons</option>
+        <option value="3">3 persons</option>
+        <option value="4">4 persons</option>
+        <option value="5">5 persons</option>
+        <option value="6">6 persons</option>
+      </select>
+      <input type="submit" class="btn btn-lg" value="Search">
+    </form>
+  </div>
+</div>
