--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <%= image_tag "airbnb.png" %>
+    <%= image_tag "airbnb1.png" %>
   <% end %>
 
   <!-- Right Navigation -->
