--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -12,7 +12,7 @@
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Resend confirmation instructions" %>
+          <%= f.button :submit, "Resend confirmation instructions", class: "btn btn-custom btn-fullwidth" %>
         </div>
       <% end %>
 
