--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,7 @@
     <%= yield %>
     <%= render 'shared/footer' %>
     <%= javascript_include_tag 'application' %>
+    <%= cloudinary_js_config %> <!-- Append this after the main `javascript_include_tag`. -->
+
   </body>
 </html>
