--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,4 +1,4 @@
 <!-- app/views/flatsshow.html.erb -->
 <% @flat.pictures.each do |picture| %>
-  <%= cl_image_tag pictures.path, width: 300, height: 200, crop: :fill %>
+  <%= cl_image_tag picture.path, width: 300, height: 200, crop: :fill %>
 <% end %>
