--- a/app/views/shared/_post-flat.html.erb
+++ b/app/views/shared/_post-flat.html.erb
@@ -25,7 +25,7 @@
           <%= f.input :price, label: false, placeholder: "Price", input_html: {class: "form-input-lg"} %>
           <%= f.input :max_guests, label: false, placeholder: "Max. guests", input_html: {class: "form-input-lg"} %>
           <%= f.input :description, label: false, placeholder: "Description", input_html: {class: "form-input-lg"}  %>
-          <%= f.input :pictures, as: :attachinary, label: false, label: "Upload photos" %>
+          <%= f.input :pictures, as: :attachinary, label: "Upload photos" %>
 
           <%#= f.input :pictures_cache, as: :hidden %>
         </div>
