cleaned up show flat page

--- a/app/views/shared/_flat-show.html.erb
+++ b/app/views/shared/_flat-show.html.erb
@@ -15,11 +15,11 @@
                 <%= @flat.description %>
               </p>
               <ul>
-                <li> <%= @flat.max_guests %> </li>
-                <li> <%= @flat.price %> </li>
-                <li> <%= @flat.city  %> </li>
-                <li> <%= @flat.postal_code %> </li>
-                <li> <%= @flat.country %> </li>
+                <li><strong>Max. guests: </strong> <%= @flat.max_guests %> </li>
+                <li><strong>Price: </strong> <%= @flat.price %> </li>
+                <li><strong>City: </strong> <%= @flat.city  %> </li>
+                <li><strong>Postcode: </strong> <%= @flat.postal_code %> </li>
+                <li><strong>Country: </strong> <%= @flat.country %> </li>
               </ul>
           </div>
           </div>
