cleaned up show page

--- a/app/assets/stylesheets/pages/_show-flat.scss
+++ b/app/assets/stylesheets/pages/_show-flat.scss
@@ -34,3 +34,12 @@ h2 {
 .btn-custom {
   padding: 13px 0;
 }
+.flat-show-banner {
+  color: white;
+  text-align: center;
+  height: 500px;
+  background-size: cover !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
