--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -27,7 +27,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4, col-lg-3">
         <div class="card text-center">
             <%= link_to flat_path(flat), class: "a" do %>
-      <% photo = flat.pictures? ? image_path("flat_pic_placeholder.jpg", height: 300, width: 400, crop: :fill) : image_path(flat.pictures, height: 300, width: 400, crop: :fill) %>
+      <% photo = flat.pictures? ? (cl_image_path flat.pictures[0].path, width: 400, height: 400, crop: :fill) : image_path("flat_pic_placeholder.jpg", height: 300, width: 400, crop: :fill) %>
 
           <div class="card-header" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= photo %>)"></div>
           <div class="card-category"><h4 class="flat-name"><%= flat.title %></h4></div>
