--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,7 +1,4 @@
-<h1>Bookings#new</h1>
-<p>Find me in app/views/bookings/new.html.erb</p>
-
-<h1>Hi there friend!</h1>
+<h3>New booking</h3>
 
 <%= simple_form_for [@flat, @booking] do |f| %>
   <%= f.error_notification %>
