--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -19,8 +19,7 @@
   </div>
 </div>
 
-<!-- <div class="main-container">
- -->  <div class="card-container">
+  <div class="container">
     <div class="row">
       <% @flats.each do |flat| %>
 
@@ -37,5 +36,4 @@
       <% end %>
     </div>
   </div>
-<!-- </div>
- -->
+
