--- a/app/views/shared/_flat-show.html.erb
+++ b/app/views/shared/_flat-show.html.erb
@@ -26,13 +26,17 @@
 
           <div class="col-xs-12 col-md-6">
           <div class="book-card">
-            <%= simple_form_for [@flat, @booking] do |f| %>
-            <%= f.error_notification %>
+            <% if current_user.id == @owner.id %>
+              <%= link_to "Your bookings", flat_bookings_path(@flat), class: "btn btn-custom btn-fullwidth" %>
+            <% else %>
+              <%= simple_form_for [@flat, @booking] do |f| %>
+              <%= f.error_notification %>
 
-            <%= f.input :start_date, as: :date, class: "form-control input-lg" %>
-            <%= f.input :end_date, as: :date, class: "form-control input-lg" %>
-            <%= f.input :total_price, as: :integer, class: "form-control input-lg" %>
-            <%= f.submit class: "btn btn-custom btn-fullwidth" %>
+              <%= f.input :start_date, as: :date, class: "form-control input-lg" %>
+              <%= f.input :end_date, as: :date, class: "form-control input-lg" %>
+              <%= f.input :total_price, as: :integer, class: "form-control input-lg" %>
+              <%= f.submit class: "btn btn-custom btn-fullwidth" %>
+            <% end %>
           <% end %>
           </div>
           </div>
