--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -2,3 +2,26 @@
 <!-- app/views/flatsshow.html.erb -->
 
 <%= render 'shared/flat-show' %>
+
+<%= javascript_tag do %>
+  $(document).ready(function() {
+    alert('<%= @alert_message %>');
+  });
+<% end %>
+
+<% content_for(:after_js) do %>
+  <%= javascript_tag do %>
+    $(document).ready(function() {
+      alert('<%= @alert_message %>');
+    });
+  <% end %>
+<% end %>
+
+<% content_for(:after_js) do %>
+  <%= javascript_tag do %>
+    $(document).ready(function() {
+      var coord = <%= raw @flat_coordinates.to_json %>;
+      alert('Flat coordinates are ' + coord.lat + ', ' + coord.lng);
+    });
+  <% end %>
+<% end %>
