--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,19 @@
   <body>
     <%= render 'shared/flashes' %>
     <%= render 'shared/navbar' %>
+
     <%= yield %>
+
     <%= render 'shared/footer' %>
+
+    <%= javascript_include_tag "https://maps.google.com/maps/api/js?libraries=places&key=#{ENV['GOOGLE_API_BROWSER_KEY']}" %>
+    <%= javascript_include_tag "https://cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/markerclusterer/src/markerclusterer_compiled.js" %>
+    <%= javascript_include_tag "https://cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js" %>
+
     <%= javascript_include_tag 'application' %>
+
+    <%= yield(:after_js) %>
+
     <%= cloudinary_js_config %> <!-- Append this after the main `javascript_include_tag`. -->
 
   </body>
