--- a/app/assets/stylesheets/pages/_show-flat.scss
+++ b/app/assets/stylesheets/pages/_show-flat.scss
@@ -43,3 +43,8 @@ h2 {
   align-items: center;
   justify-content: center;
 }
+
+.date-inputs {
+  display: flex;
+  justify-content: space-between;
+}
