--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -5,15 +5,15 @@
 
 <%= javascript_tag do %>
   $(document).ready(function() {
-    alert('<%= @alert_message %>');
-  });
+<!--     alert('<%= @alert_message %>');
+ -->  });
 <% end %>
 
 <% content_for(:after_js) do %>
   <%= javascript_tag do %>
     $(document).ready(function() {
-      alert('<%= @alert_message %>');
-    });
+<!--       alert('<%= @alert_message %>');
+ -->    });
   <% end %>
 <% end %>
 
@@ -21,7 +21,7 @@
   <%= javascript_tag do %>
     $(document).ready(function() {
       var coord = <%= raw @flat_coordinates.to_json %>;
-      alert('Flat coordinates are ' + coord.lat + ', ' + coord.lng);
-    });
+<!--       alert('Flat coordinates are ' + coord.lat + ', ' + coord.lng);
+ -->    });
   <% end %>
 <% end %>
