--- a/app/views/shared/_flat-show.html.erb
+++ b/app/views/shared/_flat-show.html.erb
@@ -1,4 +1,4 @@
-<div class="flat-show-banner" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= cl_image_path @flat.pictures[0].path if @flat.pictures.any? %>);">
+<div class="flat-show-banner" style="background: /*linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),*/ url(<%= cl_image_path @flat.pictures[0].path if @flat.pictures.any? %>);">
 </div>
 
 <!-- Apply second technique -->
