--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('http://d28hgpri8am2if.cloudfront.net/book_images/onix/interior_spreads/9781782494119/the-scandinavian-home-9781782494119.in03.jpg');">
+<!-- <div class="banner" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('http://d28hgpri8am2if.cloudfront.net/book_images/onix/interior_spreads/9781782494119/the-scandinavian-home-9781782494119.in03.jpg');">
   <div class="banner-content">
     <h1>WELCOME HOME</h1>
     <p>Rent unique places to stay from local hosts in 190+ countries.</p>
@@ -17,7 +17,7 @@
       <input type="submit" class="btn btn-lg" value="Search">
     </form>
   </div>
-</div>
+</div> -->
 
 <div class="banner" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('http://d28hgpri8am2if.cloudfront.net/book_images/onix/interior_spreads/9781782494119/the-scandinavian-home-9781782494119.in03.jpg');">
   <div class="banner-content">
@@ -26,10 +26,10 @@
     <%= simple_form_for :search, url: "/flats/search" , method: :get do |f| %>
         <div class="form-inputs">
 
-          <%= f.input :city, label: false, placeholder: "Destination", input_html: {class: "form-control input-lg"} %>
-          <%= f.input :check_in, label: false, placeholder: "Check In", input_html: {class: "form-control input-lg"} %>
-          <%= f.input :check_out, label: false, placeholder: "Check Out", input_html: {class: "form-control input-lg"} %>
-          <%= f.input :guests, label: false, default: 1, collection: [['1 Person', 1], ['2 Persons', 2], ['3 Persons', 3], ['4 Persons', 4], ['5 Persons', 5], ['6 Persons', 6]], input_html: {class: "form-control input-lg"} %>
+          <%= f.input_field :city, label: false, placeholder: "Destination", input_html: {class: "form-control input-lg"} %>
+          <%= f.input_field :check_in, label: false, placeholder: "Check In", input_html: {class: "form-control input-lg"} %>
+          <%= f.input_field :check_out, label: false, placeholder: "Check Out", input_html: {class: "form-control input-lg"} %>
+          <%= f.input_field :guests, label: false, default: 1, collection: [['1 Person', 1], ['2 Persons', 2], ['3 Persons', 3], ['4 Persons', 4], ['5 Persons', 5], ['6 Persons', 6]], input_html: {class: "form-control input-lg"} %>
         </div>
 
         <div class="form-actions">
