--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -10,7 +10,7 @@
 
   <h5>Moving out date: <%= booking.end_date %></h5>
 
-  <h5>Total charges: £<%= booking.total_price %></h5>
+  <h5>Total charges: €<%= booking.total_price %></h5>
 
   <hr>
 <% end %>
