moved search btn inline on index page, moved map to search page and fixed flexbox with cards on search page

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -3,7 +3,6 @@
   margin: 15px -5px;
   color: white;
   text-decoration: none;
-  // box-shadow: 0 8px 31px 0 rgba(0,0,0,.2);
   opacity: 0.9;
   &:hover,
   &:focus {
@@ -23,7 +22,6 @@
   padding: 30px;
   color: white;
 }
-
 .card-description {
   color: white;
   text-decoration: none;
@@ -32,7 +30,7 @@
   padding-top: 10px;
   text-align: left;
 }
-.flat-details {
+.flat-d {
   padding-bottom: 15px;
   color: #484848;
   font-size: 15px;
