--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -4,54 +4,55 @@
   position: sticky !important;
   margin: 15px 0;
 }
-// .card {
-//   background: white;
-//   margin: 15px -5px;
-//   color: white;
-//   text-decoration: none;
-//   // box-shadow: 0 8px 31px 0 rgba(0,0,0,.2);
-//   opacity: 0.9;
-//   &:hover,
-//   &:focus {
-//     transform: scale3d(1.012, 1.012, 1);
-//     text-decoration: none;
-//     opacity: 1;
-//     &::after {
-//       opacity: 1;
-//     }
-//   }
-// }
-// .card-header {
-//   height: 200px;
-//   background-size: cover;
-//   width: 300px;
-// }
-// .card-body {
-//   padding: 30px;
-//   color: white;
-// }
+.card {
+  background: white;
+  margin: 15px -5px;
+  color: white;
+  text-decoration: none;
+  // box-shadow: 0 8px 31px 0 rgba(0,0,0,.2);
+  opacity: 0.9;
+  &:hover,
+  &:focus {
+    transform: scale3d(1.012, 1.012, 1);
+    text-decoration: none;
+    opacity: 1;
+    &::after {
+      opacity: 1;
+    }
+  }
+}
+.card-header {
+  height: 200px;
+  background-size: cover;
+}
+.card-body {
+  padding: 30px;
+  color: white;
+}
 
-// .card-description {
-//   color: white;
-//   text-decoration: none;
-// }
-// .card p {
-//   padding-top: 10px;
-//   text-align: left;
-// }
-// .flat-details {
-//   padding-bottom: 15px;
-//   color: #484848;
-//   font-size: 15px;
-// }
-// .card .a {
-//   text-decoration: none;
-//   color: black;
-// }
-// .container {
-//   background: white;
-//   width: 100%;
-// }
-// .main-container {
-//   background: white;
-// }
+.card-description {
+  color: white;
+  text-decoration: none;
+}
+.card p {
+  padding-top: 10px;
+  text-align: left;
+}
+.flat-d {
+  padding-bottom: 15px;
+  color: #484848;
+  font-size: 15px;
+}
+.card .a {
+  text-decoration: none;
+  color: black;
+}
+.card-container {
+  background: white;
+  flex-grow: 1;
+  margin: 0 22px;
+}
+.main-container {
+  display: flex;
+  background: white;
+}
