--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -30,9 +30,6 @@
           <%= f.input_field :check_in, label: false, placeholder: "Check In", input_html: {class: "form-control input-lg"} %>
           <%= f.input_field :check_out, label: false, placeholder: "Check Out", input_html: {class: "form-control input-lg"} %>
           <%= f.input_field :guests, label: false, default: 1, collection: [['1 Person', 1], ['2 Persons', 2], ['3 Persons', 3], ['4 Persons', 4], ['5 Persons', 5], ['6 Persons', 6]], input_html: {class: "form-control input-lg"} %>
-        </div>
-
-        <div class="form-actions">
           <%= f.submit "Search", class: "btn btn-lg"  %>
         </div>
       <% end %>
@@ -49,7 +46,7 @@
       <% photo = flat.pictures? ? (cl_image_path flat.pictures[0].path, width: 400, height: 400, crop: :fill) : image_path("flat_pic_placeholder.jpg", height: 300, width: 400, crop: :fill) %>
 
           <div class="card-header" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= photo %>)"></div>
-          <div class="card-category"><p class="flat-details"><strong>€<%= flat.price %></strong> | <%= flat.title %></p></div>
+          <div class="card-category"><p class="flat-d"><strong>€<%= flat.price %></strong> | <%= flat.title %></p></div>
         </div>
       <% end %>
       </div>
