--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -19,19 +19,19 @@
   </div>
 </div> -->
 
+
+
+
 <div class="banner" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('http://d28hgpri8am2if.cloudfront.net/book_images/onix/interior_spreads/9781782494119/the-scandinavian-home-9781782494119.in03.jpg');">
   <div class="banner-content">
     <h1>WELCOME HOME</h1>
     <p>Rent unique places to stay from local hosts in 190+ countries.</p>
-    <%= simple_form_for :search, url: "/flats/search" , method: :get do |f| %>
-        <div class="form-inputs">
-
-          <%= f.input_field :city, label: false, placeholder: "Destination", input_html: {class: "form-control input-lg"} %>
-          <%= f.input_field :check_in, label: false, placeholder: "Check In", input_html: {class: "form-control input-lg"} %>
-          <%= f.input_field :check_out, label: false, placeholder: "Check Out", input_html: {class: "form-control input-lg"} %>
-          <%= f.input_field :guests, label: false, default: 1, collection: [['1 Person', 1], ['2 Persons', 2], ['3 Persons', 3], ['4 Persons', 4], ['5 Persons', 5], ['6 Persons', 6]], input_html: {class: "form-control input-lg"} %>
-          <%= f.submit "Search", class: "btn btn-lg"  %>
-        </div>
+      <%= simple_form_for :search, html: {class: 'form-inline'}, url: "/flats/search" , method: :get do |f| %>
+          <%= f.input :city, label: false, placeholder: "Destination", input_html: {class: "form-control input-lg"} %>
+          <%= f.input :check_in, label: false, placeholder: "Check In", input_html: {class: 'datepicker input-lg', value: Date.today.strftime('%d/%m/%Y')} %>
+          <%= f.input :check_out, label: false, placeholder: "Check Out", input_html: {class: 'datepicker input-lg', value: Date.tomorrow.strftime('%d/%m/%Y')} %>
+          <%= f.input :guests, label: false, default: 1, collection: [['1 Person', 1], ['2 Persons', 2], ['3 Persons', 3], ['4 Persons', 4], ['5 Persons', 5], ['6 Persons', 6]], input_html: {class: "form-control input-lg"} %>
+          <%= f.submit "Search", class: "btn btn-lg" %>
       <% end %>
   </div>
 </div>
