added search bar to navbar on search results page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,11 @@
     </head>
   <body>
     <%= render 'shared/flashes' %>
-    <%= render 'shared/navbar' %>
+    <% if content_for? :nav %>
+      <%= content_for :nav %>
+      <% else %>
+        <%= render 'shared/navbar' %>
+        <% end %>
 
     <%= yield %>
 
