--- a/app/views/flats/search.html.erb
+++ b/app/views/flats/search.html.erb
@@ -1,3 +1,8 @@
+<% content_for :nav do %>
+  <%= render 'shared/search-navbar' %>
+  <% end %>
+
+
 <div class="main-container">
   <div class="card-container">
     <div class="row">
