--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -23,7 +23,7 @@
 
 
 <div class="banner" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('http://d28hgpri8am2if.cloudfront.net/book_images/onix/interior_spreads/9781782494119/the-scandinavian-home-9781782494119.in03.jpg');">
-  <div class="banner-content">
+  <div>
     <h1>WELCOME HOME</h1>
     <p>Rent unique places to stay from local hosts in 190+ countries.</p>
       <%= simple_form_for :search, html: {class: 'form-inline'}, url: "/flats/search" , method: :get do |f| %>
