--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,13 +1,24 @@
 <div class="footer">
-  <div class="footer-copyright">
-    ©Airbnb, Inc.
-  </div>
-  <div class="footer-links">
-    <a href="#">Terms</a>
-    <a href="#">Privacy</a>
-    <a href="#">Sitemap</a>
-    <a href="#"><i class="fa fa-facebook"></i></a>
-    <a href="#"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-instagram"></i></a>
+  <div class="row" style="width: 100%">
+    <div class="col-xs-12 col-sm-4">
+      <div class="footer-copyright">
+        ©Airbnb, Inc.
+      </div>
+
+    </div>
+    <div class="col-xs-12 col-sm-4">
+      <div class="footer-links">
+        <a href="#">Terms</a>
+        <a href="#">Privacy</a>
+        <a href="#">Sitemap</a>
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-4">
+      <div class="footer-links">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+      </div>
+    </div>
   </div>
 </div>
