--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -42,4 +42,14 @@
 .container {
   background: white;
   width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 40px;
+}
+.card-container {
+  background: white;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 13px;
 }
