--- a/app/assets/stylesheets/components/_post-flat.scss
+++ b/app/assets/stylesheets/components/_post-flat.scss
@@ -7,6 +7,7 @@
 }
 .white-container {
   // background: url('https://images.pexels.com/photos/54283/pexels-photo-54283.jpeg?w=1500&h=1000'), linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%);
+  opacity: 0.8;
   padding: 10px;
   // display: flex;
   background: url('https://images.pexels.com/photos/207858/pexels-photo-207858.jpeg?w=1500&h=1000');
