--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,34 @@
-<%= cl_image_tag @profile.profile_pic.path %>
-<h2><%= @profile.first_name %></h2>
-<h2><%= @profile.last_name %></h2>
+<div class="container">
+<div class="row">
+  <%= cl_image_tag @profile.profile_pic.path %>
+  <h2><%= @profile.first_name %> <%= @profile.last_name %></h2>
+  <hr>
+</div>
+
+  <div class="row">
+    <h1>YOUR TRAVELS</h1>
+    <% @bookings.each do |booking| %>
+      <div class="product">
+        <% booking_flat = Flat.find(booking.flat_id) %>
+        <div class='product-upvote'>
+          <div class="product-count"><h4><%= booking.start_date %></h4></div>
+          <div class='product-count'><h4><%= booking.end_date %></h4></div>
+        </div>
+        <div class="product">
+          <h2> € <%= booking.total_price %> </h2>
+        </div>
+        <div class='product-body'>
+          <h3><%= booking_flat.city %></h3>
+          <h5><%= booking_flat.title %></h5>
+          <p> <%= booking_flat.address_line %> --
+            <%= booking_flat.postal_code %> --
+            <%= booking_flat.max_guests %> guests </p>
+        </div>
+        <%= cl_image_tag booking_flat.pictures[0].path, class: "product-image" %>
+        <%= cl_image_tag booking_flat.pictures[1].path, class: "product-image hidden-xs" %>
+      </div>
+    <% end %>
+  </div>
+</div>
 
 
